# estudo-cpp-armadillo

matrix/01-ex/: Makefile  deb  new.sh
matrix/02-ex/: CMakeLists.txt  README.md  apt  ex-01.cpp
